# ckanext-dcor_theme

./: .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  README.rst  docker-compose.ci.yml  docker-run-tests.sh  pyproject.toml  setup.py  vagrant-run-tests.sh
.github/workflows/: check.yml
ckanext/dcor_theme/: .gitignore  cli.py  plugin.py
ckanext/dcor_theme/assets/: .gitignore  dcor_theme.css  dcor_theme_colors.css  generate_theme_colors.py  hide_action_buttons.css  webassets.yml  webassets_dcor.yml
ckanext/dcor_theme/assets_theme/: webassets.yml
ckanext/dcor_theme/cli/: __init__.py  i18n_branding.py  main_css_branding.py  patch_ckan_templates.py
ckanext/dcor_theme/css/: .gitignore  README.md  __init__.py  dcor_theme.css  lato_fonts.css  make_dcor_main_css.py
ckanext/dcor_theme/public/: generate_icons.sh
ckanext/dcor_theme/public/base/images/: .gitignore
ckanext/dcor_theme/templates/: base.html  contact.html  footer.html  header.html  imprint.html  privacy.html
ckanext/dcor_theme/templates/group/snippets/: helper.html
ckanext/dcor_theme/templates/home/: about.html  index.html
ckanext/dcor_theme/templates/home/snippets/: about_text.html  promoted.html
ckanext/dcor_theme/templates/organization/snippets/: helper.html
ckanext/dcor_theme/templates/package/: read_base.html  resource_read.html
ckanext/dcor_theme/templates/package/snippets/: resource_view.html
ckanext/dcor_theme/templates/snippets/: social.html
ckanext/dcor_theme/tests/: requirements.txt  test_plugin.py
