[build-system]
# Defined by PEP 518:
requires = [
    # for version management
    "setuptools>=46", "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-dcor_theme"
authors = [
    # In alphabetical order.
    {name = "Paul Müller"},
]
maintainers = [
    {name = "Paul Müller", email="dev@craban.de"},
]
description = "The DCOR CKAN theme"
readme = "README.rst"
requires-python = ">=3.8, <4"
keywords = ["DC", "DCOR", "deformability", "cytometry"]
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Visualization',
    'Intended Audience :: Science/Research',
]
license = {text = "GNU Affero General Public License v3 or later (AGPLv3+)"}
dependencies = [
    "ckan>=2.10.4, <3",
    "Babel>=2.8.0",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/DCOR-dev/ckanext-dcor_theme"
tracker = "https://github.com/DCOR-dev/ckanext-dcor_theme/issues"
changelog = "https://github.com/DCOR-dev/ckanext-dcor_theme/blob/main/CHANGELOG"

[project.entry-points."ckan.plugins"]
dcor_theme = "ckanext.dcor_theme.plugin:DCORThemePlugin"

[tool.setuptools_scm]
write_to = "ckanext/dcor_theme/_version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
where = ["."]
include = ["ckanext.dcor_theme"]
